--- a/centered.html
+++ b/centered.html
@@ -12,14 +12,15 @@
 </head>
 
 <body>
-    <div class="p-5 d-flex align-items-center flex-column">
-<div class="row justify-content-center">
-<div class="col green">
-
-</div>
-</div>
-</div>
-container align-items-start flex-column justify-content-center
+    <!-- can't get this to center -->
+    <div class="container">
+        <div class="row p-5 align-items-center justify-content-center white">
+            <div class="col-8 green">
+                <div class="col-4 white">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
