--- a/cards.html
+++ b/cards.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container-flex">
-        <div class="row-flex">
+        <div class="row">
             <div class="col-md-3">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/bootcamp-logo.png" alt="Card image cap">
