--- a/cards.html
+++ b/cards.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="container-flex">
+    <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="/images/bootcamp-logo.png" alt="Card image cap">
                     <div class="card-body">
@@ -22,7 +22,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
-                        <div class="col-md-3">
+                        <div class="col-lg-3">
                             <div class="card" style="width: 18rem;">
                                 <img class="card-img-top" src="/images/bootcamp-logo.png" alt="Card image cap">
                                 <div class="card-body">
@@ -30,7 +30,7 @@
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    <div class="col-md-3">
+                                    <div class="col-lg-3">
                                         <div class="card" style="width: 18rem;">
                                             <img class="card-img-top" src="/images/bootcamp-logo.png"
                                                 alt="Card image cap">
@@ -39,7 +39,7 @@
                                                 <p class="card-text">Some quick example text to build on the card title
                                                     and make up the bulk of the card's content.</p>
                                                 <a href="#" class="btn btn-primary">Go somewhere</a>
-                                                <div class="col-md-3">
+                                                <div class="col-lg-3">
                                                     <div class="card" style="width: 18rem;">
                                                         <img class="card-img-top" src="/images/bootcamp-logo.png"
                                                             alt="Card image cap">
