--- a/centered.html
+++ b/centered.html
@@ -14,10 +14,8 @@
 <body>
     <!-- can't get this to center -->
     <div class="container">
-        <div class="row p-5 align-items-center justify-content-center white">
-            <div class="col-8 green">
-                <div class="col-4 white">
-                </div>
+        <div class="p-5 row min-vh-100 d-flex justify-content-center align-items-center">
+            <div class="col green">
             </div>
         </div>
     </div>
