--- a/columns.html
+++ b/columns.html
@@ -51,9 +51,9 @@
         </div>
     </div>
 
-    <div class="container ">
-        <div class="row justify-content-center">
-            <div class="col justify-content-center align-items-center green">
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex justify-content-center align-items-center green">
                 50% Width, Centered (All Screens)
             </div>
         </div>
